--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.datasource.url=jdbc:h2:mem:epictask
 spring.jpa.defer-datasource-initialization=true
+spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.security.user.name=admin
+spring.security.user.password=123
+
+#GitHub
+spring.security.oauth2.client.registration.github.client-id=ac771d05e2a1822bf0e1
+spring.security.oauth2.client.registration.github.client-secret=e54ad1af0ec8d1bda1874f9c5be508cf5ed4fd75
